fix(): update color contrast

--- a/src/app/homepage/header/header.component.scss
+++ b/src/app/homepage/header/header.component.scss
@@ -40,8 +40,8 @@
 
 .new {
   background: #232323;
-  color: #ea2845;
-  border: 1px solid #ea2845;
+  color: var(--label-new);
+  border: 1px solid var(--label-new);
   font-size: 11px;
   padding: 2px 4px;
   border-radius: 2px;
