--- a/src/scss/theme.scss
+++ b/src/scss/theme.scss
@@ -1,8 +1,10 @@
 .light-mode {
-  --primary: #ed2945;
+  --primary: #d1394e;
   --primary-1dp: #d71e38;
   --primary-2dp: #ed2945;
   --primary-3dp:#db2840;
+  --label-new: #ff7285;
+  --toc-primary-title: #ca031f;
 
   --color: #404040;
   --color-1dp: #151515;
@@ -44,6 +46,8 @@
   --primary-1dp: #ff445e;
   --primary-2dp: #f55168;
   --primary-3dp: #ff586f;
+  --label-new: #fe6379;
+  --toc-primary-title: #ff4b64;
 
   --color: rgba(255, 255, 255, 0.9);
   --color-1dp: rgba(255, 255, 255, 0.8);
